--- a/tabela.tex
+++ b/tabela.tex
@@ -22,57 +22,44 @@
 Satellite  & N & $\Delta\alpha*$ (mas) & $\Delta\delta$ (mas) & N & $\Delta\alpha*$ (mas) & $\Delta\delta$ (mas) & N & $\Delta\alpha*$ (mas) & $\Delta\delta$ (mas) \tabularnewline
 \hline
 Himalia  & 854 & -23$\pm$116 & -16$\pm$ 50 & 357 & -10$\pm$ 53 &  -0$\pm$ 59 & 23 & -49$\pm$ 78 &   7$\pm$ 47 \tabularnewline
+Himalia DE435 & 854 & -38$\pm$128 & -13$\pm$ 49 & 357 & -21$\pm$ 68 &  -7$\pm$ 57 & 23 & -21$\pm$ 65 &  18$\pm$ 50 \tabularnewline
+\hdashline
 Elara  & 403 &  23$\pm$102 & -65$\pm$ 67 & 187 &   4$\pm$ 61 & -40$\pm$ 64 & 46 &  80$\pm$ 81 &   6$\pm$ 80 \tabularnewline
+Elara DE435 & 403 & -57$\pm$145 & -58$\pm$ 65 & 187 &  14$\pm$ 67 & -47$\pm$ 66 & 46 &  94$\pm$154 &  17$\pm$ 78 \tabularnewline
+\hdashline
 Lysithea & 60 &  86$\pm$ 90 & -27$\pm$ 79 & 84 &  -9$\pm$ 81 & -63$\pm$ 58 & 90 &  63$\pm$ 80 & -32$\pm$ 85 \tabularnewline
+Lysithea DE435 & 60 & 107$\pm$150 & -19$\pm$ 84 & 84 &   7$\pm$ 96 & -73$\pm$ 58 & 90 &  18$\pm$150 & -24$\pm$ 83 \tabularnewline
+\hdashline
 Leda  & 6 &  55$\pm$143 & -100$\pm$ 67 & 48 & -10$\pm$115 & -46$\pm$ 74 & 44 & 146$\pm$ 38 &  43$\pm$ 89 \tabularnewline
+Leda DE435 & 6 & -115$\pm$259 & -87$\pm$ 66 & 48 &  -6$\pm$116 & -57$\pm$ 74 & 44 & 201$\pm$149 &  49$\pm$ 88 \tabularnewline
 \hdashline
 Pasiphae  & 295 &   3$\pm$141 & -86$\pm$ 86 & 248 & -62$\pm$109 & -82$\pm$ 86 & 66 &  83$\pm$ 68 & -87$\pm$ 80 \tabularnewline
-Callirrhoe & 9 &  -5$\pm$ 63 &  81$\pm$ 33 & & &  & 16 & 225$\pm$ 28 &  45$\pm$ 33\tabularnewline
-Megaclite & & &  & & &  & 10 & -82$\pm$ 50 &  62$\pm$ 33\tabularnewline
+Pasiphae DE 435 & 295 & -114$\pm$145 & -76$\pm$ 84 & 248 & -43$\pm$131 & -88$\pm$ 87 & 66 & -26$\pm$ 84 & -80$\pm$ 81 \tabularnewline
+%Callirrhoe & 9 &  -5$\pm$ 63 &  81$\pm$ 33 & & &  & 16 & 225$\pm$ 28 &  45$\pm$ 33\tabularnewline
+%Megaclite & & &  & & &  & 10 & -82$\pm$ 50 &  62$\pm$ 33\tabularnewline
 \hdashline
 Ananke  & 52 &  -5$\pm$ 95 & -130$\pm$137 & 141 &  51$\pm$109 & -88$\pm$101  & 57 & 154$\pm$143 & -122$\pm$ 24 \tabularnewline
-Praxidike & & &  & & &  & 2 & -288$\pm$  6 & -247$\pm$ 27\tabularnewline
+Ananke DE435 & 52 & -174$\pm$305 & -125$\pm$132 & 141 &  84$\pm$123 & -98$\pm$103 & 57 & -19$\pm$143 & -115$\pm$ 25 \tabularnewline
+%Praxidike & & &  & & &  & 2 & -288$\pm$  6 & -247$\pm$ 27\tabularnewline
 \hdashline
 Carme  & 90 & -50$\pm$ 79 & -27$\pm$103 &  204 &   8$\pm$122 & -101$\pm$ 94 & 37 &  71$\pm$ 89 & -108$\pm$ 75 \tabularnewline
+Carme DE435 & 90 & -50$\pm$185 & -16$\pm$104 & 204 &  33$\pm$141 & -105$\pm$ 97 & 37 & -82$\pm$174 & -100$\pm$ 75 \tabularnewline
 \hdashline
 Sinope  & 41 & 269$\pm$142 & -63$\pm$ 70 & 169 & -48$\pm$204 & -27$\pm$ 82 & 11 &   2$\pm$188 & -24$\pm$ 46\tabularnewline
-\hdashline
-Themisto & & &  & & &  & 16 & -684$\pm$549 & 610$\pm$ 24 \tabularnewline
-\hline
-Phoebe & 1239 &   6$\pm$ 58 & -23$\pm$ 67 & 516 &  -4$\pm$ 39 &  -1$\pm$ 38 & 32 & -32$\pm$ 86 & -45$\pm$ 59 \tabularnewline
-\hdashline
-Siarnaq & & &  & 20 & -64$\pm$ 79 & -205$\pm$101 & 56 & -39$\pm$ 62 & -123$\pm$ 59 \tabularnewline
-Paaliaq & & &  & & &  & 11 & 468$\pm$238 & -202$\pm$ 68 \tabularnewline
-\hdashline
-Albiorix  & & &  & & &  & 46 & 152$\pm$ 69 & -296$\pm$ 53 \tabularnewline
-\hline
-Sycorax & & &  & & &  & 35 & -27$\pm$136 & -59$\pm$ 81 \tabularnewline
-\hline
-Nereid & 803 &  26$\pm$128 & -28$\pm$ 97 & & &  & 99 &  34$\pm$124 & -42$\pm$ 69 \tabularnewline
-\hline
-\end{tabular}
-\par \end{centering}
-\end{table*}
-
-\newpage
-
-\begin{table*}
-\begin{centering}
-\begin{tabular}{l|ccc|ccc|ccc}
-\hline  \hline
- & \multicolumn{3}{|c|}{OPD} & \multicolumn{3}{|c|}{OHP} & \multicolumn{3}{|c}{ESO}\tabularnewline
-Satellite  & N & $\Delta\alpha*$ (mas) & $\Delta\delta$ (mas) & N & $\Delta\alpha*$ (mas) & $\Delta\delta$ (mas) & N & $\Delta\alpha*$ (mas) & $\Delta\delta$ (mas) \tabularnewline
-\hline
-Phoebe & 1239 &   6$\pm$ 58 & -23$\pm$ 67 & 516 &  -4$\pm$ 39 &  -1$\pm$ 38 & 32 & -32$\pm$ 86 & -45$\pm$ 59 \tabularnewline
-\hdashline
-Siarnaq & & &  & 20 & -64$\pm$ 79 & -205$\pm$101 & 56 & -39$\pm$ 62 & -123$\pm$ 59 \tabularnewline
-Paaliaq & & &  & & &  & 11 & 468$\pm$238 & -202$\pm$ 68 \tabularnewline
-\hdashline
-Albiorix  & & &  & & &  & 46 & 152$\pm$ 69 & -296$\pm$ 53 \tabularnewline
-\hline
-Sycorax & & &  & & &  & 35 & -27$\pm$136 & -59$\pm$ 81 \tabularnewline
-\hline
-Nereid & 803 &  26$\pm$128 & -28$\pm$ 97 & & &  & 99 &  34$\pm$124 & -42$\pm$ 69 \tabularnewline
+Sinope DE 435 & 41 & 157$\pm$254 & -52$\pm$ 68 & 169 & -43$\pm$195 & -34$\pm$ 80 & 11 & -23$\pm$113 & -11$\pm$ 45 \tabularnewline
+%\hdashline
+%Themisto & & &  & & &  & 16 & -684$\pm$549 & 610$\pm$ 24 \tabularnewline
+%\hline
+%Phoebe & 1239 &   6$\pm$ 58 & -23$\pm$ 67 & 516 &  -4$\pm$ 39 &  -1$\pm$ 38 & 32 & -32$\pm$ 86 & -45$\pm$ 59 \tabularnewline
+%\hdashline
+%Siarnaq & & &  & 20 & -64$\pm$ 79 & -205$\pm$101 & 56 & -39$\pm$ 62 & -123$\pm$ 59 \tabularnewline
+%Paaliaq & & &  & & &  & 11 & 468$\pm$238 & -202$\pm$ 68 \tabularnewline
+%\hdashline
+%Albiorix  & & &  & & &  & 46 & 152$\pm$ 69 & -296$\pm$ 53 \tabularnewline
+%\hline
+%Sycorax & & &  & & &  & 35 & -27$\pm$136 & -59$\pm$ 81 \tabularnewline
+%\hline
+%Nereid & 803 &  26$\pm$128 & -28$\pm$ 97 & & &  & 99 &  34$\pm$124 & -42$\pm$ 69 \tabularnewline
 \hline
 \end{tabular}
 \par \end{centering}
