--- a/tabela.tex
+++ b/tabela.tex
@@ -8,6 +8,7 @@
 \usepackage{graphicx}
 \usepackage{pdflscape}
 \usepackage{arydshln}
+\usepackage{subfigure}
 \author{Altair Ramos}
 
 \begin{document}
@@ -64,6 +65,124 @@ Sinope DE435 & 41 & 264$\pm$141 & -52$\pm$ 68 & 169 & -50$\pm$206 & -34$\pm$ 80 
 \end{tabular}
 \par \end{centering}
 \end{table*}
+
+
+\begin{figure}
+\includegraphics[scale=1]{/home/altairjunior/Documentos/teste/observation/DE435-DE421.png}
+\end{figure}
+
+
+\begin{figure*}
+\begin{centering}
+\subfigure{\includegraphics[width=9.5cm]{Irregulares/figures/Himalia_RA}}
+\subfigure{\includegraphics[width=9.5cm]{/home/altairjunior/Documentos/Softwares/de435/Himalia_RA}}
+\end{centering}
+\end{figure*}
+
+\begin{figure*}
+\begin{centering}
+\subfigure{\includegraphics[width=9.5cm]{Irregulares/figures/Himalia_DEC}}
+\subfigure{\includegraphics[width=9.5cm]{/home/altairjunior/Documentos/Softwares/de435/Himalia_DEC}}
+\end{centering}
+\end{figure*}
+
+\begin{figure*}
+\begin{centering}
+\subfigure{\includegraphics[width=9.5cm]{Irregulares/figures/Elara_RA}}
+\subfigure{\includegraphics[width=9.5cm]{/home/altairjunior/Documentos/Softwares/de435/Elara_RA}}
+\end{centering}
+\end{figure*}
+
+\begin{figure*}
+\begin{centering}
+\subfigure{\includegraphics[width=9.5cm]{Irregulares/figures/Elara_DEC}}
+\subfigure{\includegraphics[width=9.5cm]{/home/altairjunior/Documentos/Softwares/de435/Elara_DEC}}
+\end{centering}
+\end{figure*}
+
+\begin{figure*}
+\begin{centering}
+\subfigure{\includegraphics[width=9.5cm]{Irregulares/figures/Leda_RA}}
+\subfigure{\includegraphics[width=9.5cm]{/home/altairjunior/Documentos/Softwares/de435/Leda_RA}}
+\end{centering}
+\end{figure*}
+
+\begin{figure*}
+\begin{centering}
+\subfigure{\includegraphics[width=9.5cm]{Irregulares/figures/Leda_DEC}}
+\subfigure{\includegraphics[width=9.5cm]{/home/altairjunior/Documentos/Softwares/de435/Leda_DEC}}
+\end{centering}
+\end{figure*}
+
+\begin{figure*}
+\begin{centering}
+\subfigure{\includegraphics[width=9.5cm]{Irregulares/figures/Lysithea_RA}}
+\subfigure{\includegraphics[width=9.5cm]{/home/altairjunior/Documentos/Softwares/de435/Lysithea_RA}}
+\end{centering}
+\end{figure*}
+
+\begin{figure*}
+\begin{centering}
+\subfigure{\includegraphics[width=9.5cm]{Irregulares/figures/Lysithea_DEC}}
+\subfigure{\includegraphics[width=9.5cm]{/home/altairjunior/Documentos/Softwares/de435/Lysithea_DEC}}
+\end{centering}
+\end{figure*}
+
+\begin{figure*}
+\begin{centering}
+\subfigure{\includegraphics[width=9.5cm]{Irregulares/figures/Ananke_RA}}
+\subfigure{\includegraphics[width=9.5cm]{/home/altairjunior/Documentos/Softwares/de435/Ananke_RA}}
+\end{centering}
+\end{figure*}
+
+\begin{figure*}
+\begin{centering}
+\subfigure{\includegraphics[width=9.5cm]{Irregulares/figures/Ananke_DEC}}
+\subfigure{\includegraphics[width=9.5cm]{/home/altairjunior/Documentos/Softwares/de435/Ananke_DEC}}
+\end{centering}
+\end{figure*}
+
+\begin{figure*}
+\begin{centering}
+\subfigure{\includegraphics[width=9.5cm]{Irregulares/figures/Carme_RA}}
+\subfigure{\includegraphics[width=9.5cm]{/home/altairjunior/Documentos/Softwares/de435/Carme_RA}}
+\end{centering}
+\end{figure*}
+
+\begin{figure*}
+\begin{centering}
+\subfigure{\includegraphics[width=9.5cm]{Irregulares/figures/Carme_DEC}}
+\subfigure{\includegraphics[width=9.5cm]{/home/altairjunior/Documentos/Softwares/de435/Carme_DEC}}
+\end{centering}
+\end{figure*}
+
+\begin{figure*}
+\begin{centering}
+\subfigure{\includegraphics[width=9.5cm]{Irregulares/figures/Pasiphae_RA}}
+\subfigure{\includegraphics[width=9.5cm]{/home/altairjunior/Documentos/Softwares/de435/Pasiphae_RA}}
+\end{centering}
+\end{figure*}
+
+\begin{figure*}
+\begin{centering}
+\subfigure{\includegraphics[width=9.5cm]{Irregulares/figures/Pasiphae_DEC}}
+\subfigure{\includegraphics[width=9.5cm]{/home/altairjunior/Documentos/Softwares/de435/Pasiphae_DEC}}
+\end{centering}
+\end{figure*}
+
+\begin{figure*}
+\begin{centering}
+\subfigure{\includegraphics[width=9.5cm]{Irregulares/figures/Sinope_RA}}
+\subfigure{\includegraphics[width=9.5cm]{/home/altairjunior/Documentos/Softwares/de435/Sinope_RA}}
+\end{centering}
+\end{figure*}
+
+\begin{figure*}
+\begin{centering}
+\subfigure{\includegraphics[width=9.5cm]{Irregulares/figures/Sinope_DEC}}
+\subfigure{\includegraphics[width=9.5cm]{/home/altairjunior/Documentos/Softwares/de435/Sinope_DEC}}
+\end{centering}
+\end{figure*}
 
 \end{landscape}
 
