--- a/Irregular-occ/references.bib
+++ b/Irregular-occ/references.bib
@@ -421,6 +421,13 @@ month={Jun},
 pages={897–900}
 }
 
+@TechReport{Folkner2010,
+author = {Folkner, W. M.},
+institution = {Jet Prop. Lab. Interoffice Memo. IOM 343R-10-001},
+year = {2010},
+}
+
+
 @article{Sicardy2011,
 title={A Pluto-like radius and a high albedo for the dwarf planet Eris from an occultation},
 volume={478},
