--- a/Irregular-occ/references.bib
+++ b/Irregular-occ/references.bib
@@ -247,6 +247,20 @@ month={May},
 pages={69–71}
 }
 
+@article{Emelyanov2005,
+title={Ephemerides of the outer Jovian satellites},
+volume={435},
+url={http://dx.doi.org/10.1051/0004-6361:20042264},
+DOI={10.1051/0004-6361:20042264},
+number={3},
+journal={Astronomy and Astrophysics},
+publisher={EDP Sciences},
+author={Emelyanov, N. V.},
+year={2005},
+month={Jun},
+pages={1173–1179}
+}
+
 @article{Agnor2006,
 title={Neptune’s capture of its moon Triton in a binary–planet gravitational encounter},
 volume={441},
@@ -352,19 +366,19 @@ month={Nov},
 pages={1807–1811}
 }
 
-@article{Emelyanov2008,
-title={The natural satellites ephemerides facility MULTI-SAT},
-volume={487},
-url={http://dx.doi.org/10.1051/0004-6361:200809790},
-DOI={10.1051/0004-6361:200809790},
-number={2},
-journal={Astronomy and Astrophysics},
-publisher={EDP Sciences},
-author={Emel’yanov, N. V. and Arlot, J.-E.},
-year={2008},
-month={Aug},
-pages={759–765}
-}
+%@article{Emelyanov2008,
+%title={The natural satellites ephemerides facility MULTI-SAT},
+%volume={487},
+%url={http://dx.doi.org/10.1051/0004-6361:200809790},
+%DOI={10.1051/0004-6361:200809790},
+%number={2},
+%journal={Astronomy and Astrophysics},
+%publisher={EDP Sciences},
+%author={Emel’yanov, N. V. and Arlot, J.-E.},
+%year={2008},
+%month={Aug},
+%pages={759–765}
+%}
 
 @article{Jacobson2009,
 title={THE ORBITS OF THE NEPTUNIAN SATELLITES AND THE ORIENTATION OF THE POLE OF NEPTUNE},
@@ -619,6 +633,15 @@ year={2014},
 month={Dec},
 pages={1663–1668}
 }
+
+@TechReport{Folkner2014,
+author = {William M. Folkner and James G. Williams and Dale H. Boggs and Ryan S. Park and Petr Kuchynka},
+title = {The Planetary and Lunar Ephemerides DE430 and DE431},
+institution = {Jet Propulsion Laboratory},
+year = {2014},
+url = {http://ilrs.gsfc.nasa.gov/docs/2014/196C.pdf}
+}
+
 
 @article{GomesJunior2015,
 title={Astrometric positions for 18 irregular satellites of giant planets from 23 years of observations},
