--- a/Irregular-occ/Irregular-occ.tex
+++ b/Irregular-occ/Irregular-occ.tex
@@ -29,7 +29,8 @@
 
 %%%%% AUTHORS - PLACE YOUR OWN MACROS HERE %%%%%
 
-\title[Orbits and predictions for occultations up to 2020]{New orbits of irregular satellites based on thousands of new observations and predictions for stellar occultations up to 2020}
+\title[Orbits and predictions for occultations up to 2020]{New orbits of irregular satellites for the predictions of stellar occultations up to 2020}
+%\title[Orbits and predictions for occultations up to 2020]{New orbits of irregular satellites based on thousands of new observations and predictions for stellar occultations up to 2020}
 \author[A. R. Gomes-J\'unior, M. Assafin, L. Beauvalet et al.]{A. R. Gomes-J\'unior$^{1}$\thanks{E-mail: altair08@astro.ufrj.br},
 M. Assafin$^{1,\dag}$,
 L. Beauvalet$^{2,3}$,
@@ -65,7 +66,8 @@ $^{6}$Federal University of Technology - Paran\'a (UTFPR / DAFIS), Rua Sete de S
 %Based on this observations, we aimed to generate new numerical integration of the orbits of eight largest irregular satellites of Jupiter: Himalia, Elara, Pasiphae, Carme, Lysithea, Sinope, Ananke and Leda. This is a short-time ephemeris that corrected systematic errors from previous ephemeris (JPL JUP300). For Phoebe we updated ephemeris from \cite{Desmars2013} using 75\% more positions than the previous one.
 %Also Jupiter will cross the galactic plane in 2019-2020 and Saturn in 2018. This creates a good opportunity to predict stellar occultations due to the large number of events that can be predicted in these periods. Thus, we aimed to predict stellar occultations for the same 9 satellites cited above. Using the UCAC4 catalogue we managed to identify \noccs candidates of stellar occultations between the period of January, 2016 and December, 2020.
 %We discuss how the successful observation of a stellar occultation by these objects is quite possible and present some of those potential occultations.
-\cite{GomesJunior2015} published 6523 positions for 18 irregular satellites from observations made between 1992 and 2014 with an estimated error of about 60 to 80 mas. Based on this set of positions, we performed numerical integrations for deriving new orbits for the eight largest irregular satellites of Jupiter: Himalia, Elara, Pasiphae, Carme, Lysithea, Sinope, Ananke and Leda. This corrected systematic errors and resulted in an ephemeris more accurate/precise than JPL jup300 for these bodies at least in the immediate future. For Phoebe we updated the ephemeris from \cite{Desmars2013} using 75\% more positions than the previous one. Due to their orbital characteristics, it is common belief that the irregular satellites were captured by the giant planets in the early Solar System, but there is no consensus for a single model explaining where they were formed. Size, shape, albedo and composition would help to trace back their true origin, but these physical parameters are yet poorly known for irregular satellites. The observation of stellar occultations would allow for the determination of such parameters. Indeed Jupiter will cross the galactic plane in 2019-2020 and Saturn in 2018, improving a lot the chances of observing such events in the near future. Using the derived ephemerides and the UCAC4 catalogue we managed to identify \noccs candidate stellar occultations between January 2016 and December 2020 for the 9 satellites studied here. We discussed how the successful observation of a stellar occultation by these objects is possible and present some potential occultations.
+\cite{GomesJunior2015} published \textbf{3613 positions for the 8 largest irregular satellites of Jupiter and 1787 positions for the largest irregular satellite of Saturn, Phoebe}.  These observations were made between \textbf{1995} and 2014 and have an estimated error of about 60 to 80 mas. Based on this set of positions, we performed numerical integrations for deriving new orbits for the eight largest irregular satellites of Jupiter: Himalia, Elara, Pasiphae, Carme, Lysithea, Sinope, Ananke and Leda. %This corrected systematic errors and resulted in an ephemeris more accurate/precise than JPL jup300 for these bodies at least in the immediate future.
+For Phoebe we updated the ephemeris from \cite{Desmars2013} using 75\% more positions than the previous one. Due to their orbital characteristics, it is common belief that the irregular satellites were captured by the giant planets in the early Solar System, but there is no consensus for a single model explaining where they were formed. Size, shape, albedo and composition would help to trace back their true origin, but these physical parameters are yet poorly known for irregular satellites. The observation of stellar occultations would allow for the determination of such parameters. Indeed Jupiter will cross the galactic plane in 2019-2020 and Saturn in 2018, improving a lot the chances of observing such events in the near future. Using the derived ephemerides and the UCAC4 catalogue we managed to identify \noccs candidate stellar occultations between January 2016 and December 2020 for the 9 satellites studied here. We discussed how the successful observation of a stellar occultation by these objects is possible and present some potential occultations.
 \end{abstract}
 
 \begin{keywords}
@@ -128,7 +130,7 @@ In section \ref{Sec: integration}, we present the new determination of the orbit
 
 \section{Orbit computations} \label{Sec: integration}
 
-\citetalias{GomesJunior2015} published 6523 precise positions for 18 irregular satellites from observations made at the Observatório do Pico dos Dias (OPD), Observatoire Haute-Provence (OHP) and European Southern Observatory (ESO) between 1992 and 2014. 
+\citetalias{GomesJunior2015} published \textbf{3613} precise positions for \textbf{the 8 largest irregular satellites of Jupiter} from observations made at the Observatório do Pico dos Dias (OPD), Observatoire Haute-Provence (OHP) and European Southern Observatory (ESO) between \textbf{1995} and 2014. 
 
 Here we compute new orbits based on the observations published in \citetalias{GomesJunior2015}. First, because the reduction was made with a consistent and precise stellar catalogue and with a robust astrometry \citep[PRAIA,][]{Assafin2011}. Second, besides recent observations, this consistent set of numerous and precise positions covers many orbital periods at many distinct orbital plane sights, allowing to fully constrain the orbit for the short time span explored in this work. For these reasons, only this set of positions was used for the satellites of Jupiter.
 
@@ -179,30 +181,30 @@ U_{\bar{i}\hat{J}}=&\displaystyle -\frac{R_J^2 J_2}{r_{iJ}^3}\left(\frac{3}{2}\s
 \textbf{The expressions of $\nabla U$ have been developed in \cite{Lainey2004}}. \textbf{The equations of motion are integrated with the 15th order numerical integrator RADAU \citep{Everhart1985} using a constant step of one day}. \textbf{The positions of the objects of the solar system are provided by the DE423 ephemeris \citep{Folkner2010}, while those of the galilean satellites are provided by NOE2010 \citep{Lainey2004}}.
 Our model was fitted to the observations through a least-squares procedure. The satellites were integrated one dynamical family at a time, to gain computing time, while losing minimum precision. Indeed, the interactions between satellites not belonging to the same dynamical family are negligible considering the short timespan of our integration. 
 
-The obtained ephemeris is hereafter refered as STE, for Special-Tailored Ephemeris. The initial osculating elements at the origin of integration are presented in Table \ref{Tab: sat_ell}.
+The obtained ephemeris is hereafter refered as STE, for Special-Tailored Ephemeris. The initial osculating elements at the origin of integration, \textbf{the number of observations used and the time-span where these observations are distributed} are presented in Table \ref{Tab: sat_ell}.
 
 \begin{table*}
 \caption{Initial osculating elements for Jupiter irregular satellites at JD 2451545.0 with respect to the center of Jupiter.
  }\label{Tab: sat_ell}
 \begin{center}
-\begin{tabular}{ccccccc}
+\begin{tabular}{lcccccccc}
 \hline\hline
-Satellite & a (km) & e & I$\degr$ & $\Omega\degr$ & $\omega\degr$ & $v\degr$ \\ 
+Satellite & N & Time-span & a (km) & e & I$\degr$ & $\Omega\degr$ & $\omega\degr$ & $v\degr$ \\ 
 \hline
-Himalia &   11372100 $\pm$ 500    &    0.166 $\pm$ 0.002      &   45.14 $\pm$ 0.15      &   39.77 $\pm$ 0.19      &   351.48 $\pm$ 0.46      &   97.35 $\pm$ 0.48    \\
-Elara &   11741170 $\pm$ 690  &      0.222 $\pm$ 0.002      &   28.64 $\pm$ 0.18      &   68.42 $\pm$ 0.43      &   179.82 $\pm$ 0.56      &   339.08 $\pm$ 0.82  \\
-Lysithea &   11739900 $\pm$ 1300  &      0.136 $\pm$ 0.004      &    51.12 $\pm$ 0.27     &   5.53 $\pm$ 0.52      &   53.0 $\pm$ 1.5      &   318.9 $\pm$ 2.0   \\
-Leda &   11140300  $\pm$ 4300  &     0.173  $\pm$ 0.007     &   16.15  $\pm$ 0.75    &   272.6  $\pm$ 1.7    &   212.2  $\pm$ 3.6          &   218.8  $\pm$ 3.2  \\
-Pasiphae &  23425000  $\pm$ 5000    &     0.379  $\pm$ 0.001       &   152.44 $\pm$ 0.10      &   284.59 $\pm$ 0.21      &   135.96 $\pm$ 0.19      &   236.97 $\pm$ 0.16 \\
-Sinope &   22968800 $\pm$ 5200   &     0.316 $\pm$ 0.002      &   157.76 $\pm$ 0.12      &   256.62 $\pm$ 0.55      &   298.38 $\pm$ 0.55      &   167.57 $\pm$ 0.19    \\
-Carme &   24202924 $\pm$ 4800      &  0.242 $\pm$ 0.001      &   147.13 $\pm$ 0.10      &   154.01 $\pm$ 0.25      &   47.90 $\pm$ 0.29      &   234.41 $\pm$ 0.19  \\
-Ananke &  21683800  $\pm$ 7200  &     0.380 $\pm$ 0.002      &   172.29 $\pm$ 0.20      &   56.9 $\pm$ 1.2      &   123.3 $\pm$ 1.2      &   231.24 $\pm$ 0.21  \\
+Himalia & 1234 & 1995-2014 &   11372100 $\pm$ 500    &    0.166 $\pm$ 0.002      &   45.14 $\pm$ 0.15      &   39.77 $\pm$ 0.19      &   351.48 $\pm$ 0.46      &   97.35 $\pm$ 0.48    \\
+Elara & 636 & 1996-2014 &   11741170 $\pm$ 690  &      0.222 $\pm$ 0.002      &   28.64 $\pm$ 0.18      &   68.42 $\pm$ 0.43      &   179.82 $\pm$ 0.56      &   339.08 $\pm$ 0.82  \\
+Lysithea & 234 & 1996-2010 &   11739900 $\pm$ 1300  &      0.136 $\pm$ 0.004      &    51.12 $\pm$ 0.27     &   5.53 $\pm$ 0.52      &   53.0 $\pm$ 1.5      &   318.9 $\pm$ 2.0   \\
+Leda & 98 & 1996-2009 &   11140300  $\pm$ 4300  &     0.173  $\pm$ 0.007     &   16.15  $\pm$ 0.75    &   272.6  $\pm$ 1.7    &   212.2  $\pm$ 3.6          &   218.8  $\pm$ 3.2  \\
+Pasiphae & 609 & 1996-2013 &  23425000  $\pm$ 5000    &     0.379  $\pm$ 0.001       &   152.44 $\pm$ 0.10      &   284.59 $\pm$ 0.21      &   135.96 $\pm$ 0.19      &   236.97 $\pm$ 0.16 \\
+Sinope & 221 & 1996-2009 &   22968800 $\pm$ 5200   &     0.316 $\pm$ 0.002      &   157.76 $\pm$ 0.12      &   256.62 $\pm$ 0.55      &   298.38 $\pm$ 0.55      &   167.57 $\pm$ 0.19    \\
+Carme & 331 & 1996-2013 &   24202924 $\pm$ 4800      &  0.242 $\pm$ 0.001      &   147.13 $\pm$ 0.10      &   154.01 $\pm$ 0.25      &   47.90 $\pm$ 0.29      &   234.41 $\pm$ 0.19  \\
+Ananke & 250 & 1996-2010 &  21683800  $\pm$ 7200  &     0.380 $\pm$ 0.002      &   172.29 $\pm$ 0.20      &   56.9 $\pm$ 1.2      &   123.3 $\pm$ 1.2      &   231.24 $\pm$ 0.21  \\
 %Themisto  & 7393800    &     0.198       &   25.77  &   220.0     &   216.3    &   262.1     \\
 \hline
 \end{tabular} 
 \end{center}
 \begin{flushleft}
-\textbf{Notes}: a: semimajor axis; e : excentricity; I: inclination relative to the equatorial reference plane J2000; $\Omega$: longitude of the ascending node; $\omega$: argument of periapsis; $v$: true anomaly.
+\textbf{Notes}: N: number of observations used; a: semimajor axis; e : excentricity; I: inclination relative to the equatorial reference plane J2000; $\Omega$: longitude of the ascending node; $\omega$: argument of periapsis; $v$: true anomaly.
 \end{flushleft}
 \end{table*}
 
@@ -210,17 +212,17 @@ All the orbits determined for the satellites show satisfying residuals. The resi
 
 We compared the STE ephemeris to the JPL for all the Jupiter satellites we fitted, until 2021. For instance, the divergence between 2015 and 2021 is at most 98 mas in $\Delta \alpha \cos \delta$ and 58 mas in $\Delta \delta$ for Himalia and 181 mas in $\Delta \alpha \cos \delta$ and 152 mas in $\Delta \delta$ for Carme.
 
-Fig. \ref{Fig: JPL-STE} displays the offsets of the positions published by \citetalias{GomesJunior2015} for the satellite Carme in declination relative to the STE ephemeris, to \cite{Jacobson2012} jup300 JPL ephemeris and \cite{Emelyanov2008} ephemeris.We see that the systematic JPL ephemeris offsets pointed out by \citetalias{GomesJunior2015} are reduced with our ephemeris, as expected.
+Fig. \ref{Fig: JPL-STE} displays the offsets of the positions published by \citetalias{GomesJunior2015} for the satellite Carme in declination relative to the STE ephemeris, to \cite{Jacobson2012} jup300 JPL ephemeris and \cite{Emelyanov2005}\footnote{\textbf{Last update: February 19, 2012}} ephemeris. \textbf{The DE431 planetary ephemeris \citep{Folkner2014} was used to calculate the positions of Jupiter for the 3 models}. We see that the systematic JPL ephemeris offsets pointed out by \citetalias{GomesJunior2015} are reduced with our ephemeris, as expected.
 
 \begin{figure}
 \includegraphics[width=8.8cm]{figures/Carme_ephemeris.eps}
-\caption{Offsets in declination of the positions published by \protect\citetalias{GomesJunior2015} for Carme. The red "x" relative to the special-tailored ephemeris, the blue "+" relative to the jup300 JPL ephemeris and the green dot relative to \protect\cite{Emelyanov2008}. As expected, the ephemeris systematic errors pointed out by \protect\citetalias{GomesJunior2015} are reduced with the STE ephemeris. \label{Fig: JPL-STE}}
+\caption{Offsets in declination of the positions published by \protect\citetalias{GomesJunior2015} for Carme. The red "x" relative to the special-tailored ephemeris, the blue "+" relative to the jup300 JPL ephemeris and the green dot relative to \protect\cite{Emelyanov2005}. As expected, the ephemeris systematic errors pointed out by \protect\citetalias{GomesJunior2015} are reduced with the STE ephemeris. \label{Fig: JPL-STE}}
 \end{figure}
 
 In Table \ref{Tab:STE-error} it is presented the mean offsets and the respective standard deviation of the \citetalias{GomesJunior2015} positions relative to the same 3 ephemeris as above. We can see that the mean offsets as well as most of their standard deviations are greatly reduced with the STE ephemeris.
 
 \begin{table*}
-\caption{\label{Tab:STE-error} Mean offsets and standard deviation of the \protect\citetalias{GomesJunior2015} positions relative to the STE, \protect\cite{Jacobson2012} and \protect\cite{Emelyanov2008} ephemeris .}
+\caption{\label{Tab:STE-error} Mean offsets and standard deviation of the \protect\citetalias{GomesJunior2015} positions relative to the STE, \protect\cite{Jacobson2012} and \protect\cite{Emelyanov2005} ephemeris .}
 \begin{centering}
 \begin{tabular}{l|cc|cc|cc}
 \hline  \hline
@@ -228,14 +230,14 @@ In Table \ref{Tab:STE-error} it is presented the mean offsets and the respective
  & \multicolumn{2}{|c|}{STE} & \multicolumn{2}{|c|}{JPL} & \multicolumn{2}{|c}{Eme2008}\tabularnewline
 Satellite  & $\Delta\alpha\cos\delta$ (mas) & $\Delta\delta$ (mas) & $\Delta\alpha\cos\delta$ (mas) & $\Delta\delta$ (mas) & $\Delta\alpha\cos\delta$ (mas) & $\Delta\delta$ (mas) \tabularnewline
 \hline
-Ananke & $-10\pm90$ & $3\pm73$ & $60\pm127$ & $-108\pm99$ & $101\pm180$ & $-107\pm120$ \tabularnewline
-Carme & $14\pm73$ & $-1\pm51$ & $-3\pm114$ & $-80\pm102$ & $-6\pm108$ & $-45\pm80$ \tabularnewline
-Elara & $3\pm92$ & $-12\pm57$ & $20\pm92$ & $-50\pm69$ & $23\pm94$ & $-83\pm81$ \tabularnewline
 Himalia & $-15\pm66$ & $-7\pm54$  & $-19\pm80$  & $-11\pm52$ & $-18\pm72$  & $-13\pm53$ \tabularnewline
-Leda & $-9\pm67$ & $-8\pm77$ & $60\pm117$ & $-13\pm95$ & $166\pm162$ & $92\pm95$ \tabularnewline
+Elara & $3\pm92$ & $-12\pm57$ & $20\pm92$ & $-50\pm69$ & $23\pm94$ & $-83\pm81$ \tabularnewline
 Lysithea & $15\pm79$ & $-21\pm68$ & $40\pm92$ & $-43\pm77$ & $117\pm193$ & $-76\pm185$ \tabularnewline
+Leda & $-9\pm67$ & $-8\pm77$ & $60\pm117$ & $-13\pm95$ & $166\pm162$ & $92\pm95$ \tabularnewline
 Pasiphae & $4\pm89$ & $-16\pm57$ & $-17\pm130$ & $-82\pm85$ & $-10\pm102$ & $-54\pm74$ \tabularnewline
 Sinope & $9\pm79$ & $-4\pm47$ & $10\pm228$ & $-35\pm76$ & $11\pm227$ & $-52\pm63$ \tabularnewline
+Carme & $14\pm73$ & $-1\pm51$ & $-3\pm114$ & $-80\pm102$ & $-6\pm108$ & $-45\pm80$ \tabularnewline
+Ananke & $-10\pm90$ & $3\pm73$ & $60\pm127$ & $-108\pm99$ & $101\pm180$ & $-107\pm120$ \tabularnewline
 \hline
 \end{tabular}
 \par \end{centering}
@@ -411,7 +413,7 @@ C/A: geocentric closest approach; Sit: Situation test considered.
 
 We performed new numerical integration for improving the orbits of some of the larger irregular satellites. Consequently, with more precise ephemeris, we predicted stellar occultations aiming to access fundamental parameters like size, shape, albedo, ultimately aiming to track the formation origin of these bodies.
 
-For the irregular satellites of Jupiter (Ananke, Carme, Elara, Himalia, Leda, Lysithea, Pasiphae and Sinope), we produced ephemeris using only the observations of \citetalias{GomesJunior2015}. The systematic errors found in the JPL ephemeris \citep{Jacobson2012} and \cite{Emelyanov2008} were improved. These new ephemerides are denominated Special-Tailored Ephemeris.
+For the irregular satellites of Jupiter (Ananke, Carme, Elara, Himalia, Leda, Lysithea, Pasiphae and Sinope), we produced ephemeris using only the observations of \citetalias{GomesJunior2015}. The systematic errors found in the JPL ephemeris \citep{Jacobson2012} and \cite{Emelyanov2005} were improved. These new ephemerides are denominated Special-Tailored Ephemeris.
 
 We also updated the ephemeris of Phoebe \citep{Desmars2013} using the observations of \citetalias{GomesJunior2015}, \cite{Peng2015}, observations from  MPC and from Flagstaff. A total of 5886 observations between 1989 and 2014 were used in the process. This represents and increase of about 75\% in the number used to generate the ephemeris of Phoebe in \cite{Desmars2013}.
 
@@ -438,7 +440,7 @@ RV-M thanks grants: CNPq-306885/2013, Capes/Cofecub-2506/2015, Faperj/PAPDRJ-45/
 JIBC acknowledges CNPq for a PQ2 fellowship (process number 308489/2013-6).
 BEM thanks the financial support of CAPES.
 FB-R acknowledges PAPDRJ-FAPERJ/CAPES E-43/2013 number 144997, E-26/101.375/2014.
-The numerical model of the satellites of Jupiter was developped during a post-doctoral contract funded by the Chinese Academy of Sciences (CAS) and supported by the National Scientific Fund of China (NSFC)
+The numerical model of the satellites of Jupiter was developped during a post-doctoral contract funded by the Chinese Academy of Sciences (CAS) and supported by the National Scientific Fund of China (NSFC).
 
 
 \bibliographystyle{mn2e}
