--- a/Irregular-occ/references.bib
+++ b/Irregular-occ/references.bib
@@ -394,6 +394,20 @@ month={Apr},
 pages={4322–4329}
 }
 
+@article{Arlot2009,
+title={The NSDB natural satellites astrometric database},
+volume={503},
+url={http://dx.doi.org/10.1051/0004-6361/200911645},
+DOI={10.1051/0004-6361/200911645},
+number={2},
+journal={Astronomy and Astrophysics},
+publisher={EDP Sciences},
+author={Arlot, J.-E. and Emelyanov, N. V.},
+year={2009},
+month={Aug},
+pages={631–638}
+}
+
 @article{Assafin2010,
 title={Precise predictions of stellar occultations by Pluto, Charon, Nix, and Hydra for 2008–2015},
 volume={515},
