--- a/Irregular-occ/references.bib
+++ b/Irregular-occ/references.bib
@@ -366,19 +366,19 @@ month={Nov},
 pages={1807–1811}
 }
 
-%@article{Emelyanov2008,
-%title={The natural satellites ephemerides facility MULTI-SAT},
-%volume={487},
-%url={http://dx.doi.org/10.1051/0004-6361:200809790},
-%DOI={10.1051/0004-6361:200809790},
-%number={2},
-%journal={Astronomy and Astrophysics},
-%publisher={EDP Sciences},
-%author={Emel’yanov, N. V. and Arlot, J.-E.},
-%year={2008},
-%month={Aug},
-%pages={759–765}
-%}
+@article{Emelyanov2008,
+title={The natural satellites ephemerides facility MULTI-SAT},
+volume={487},
+url={http://dx.doi.org/10.1051/0004-6361:200809790},
+DOI={10.1051/0004-6361:200809790},
+number={2},
+journal={Astronomy and Astrophysics},
+publisher={EDP Sciences},
+author={Emel’yanov, N. V. and Arlot, J.-E.},
+year={2008},
+month={Aug},
+pages={759–765}
+}
 
 @article{Jacobson2009,
 title={THE ORBITS OF THE NEPTUNIAN SATELLITES AND THE ORIENTATION OF THE POLE OF NEPTUNE},
@@ -452,7 +452,21 @@ pages={897–900}
 @TechReport{Folkner2010,
 author = {Folkner, W. M.},
 institution = {Jet Prop. Lab. Interoffice Memo. IOM 343R-10-001},
-year = {2010},
+year = {2010}
+}
+
+@article{Emelyanov2010,
+title={Precision of the ephemerides of outer planetary satellites},
+volume={58},
+url={http://dx.doi.org/10.1016/j.pss.2009.11.003},
+DOI={10.1016/j.pss.2009.11.003},
+number={3},
+journal={Planetary and Space Science},
+publisher={Elsevier BV},
+author={Emelyanov, Nikolay}, 
+year={2010},
+month={Feb},
+pages={411–420}
 }
 
 
