--- a/Irregular-occ/references.bib
+++ b/Irregular-occ/references.bib
@@ -328,20 +328,6 @@ year={2007},
 pages={483–502}
 }
 
-%@article{Emelyanov2007,
-%title={Updated ephemeris of Phoebe, ninth satellite of Saturn},
-%volume={473},
-%url={http://dx.doi.org/10.1051/0004-6361:20077920},
-%DOI={10.1051/0004-6361:20077920},
-%number={1},
-%journal={Astronomy and Astrophysics},
-%publisher={EDP Sciences},
-%author={Emelyanov, N. V.},
-%year={2007},
-%month={Oct},
-%pages={343–346}
-%}
-
 @inbook{Barucci2008,
 author = {Barucci, M Antonietta and Brown, Michael E and Emery, Joshua P},
 booktitle = {The Solar System Beyond Neptune},
@@ -605,6 +591,19 @@ author={Desmars, J. and Li, S. N. and Tajeddine, R. and Peng, Q. Y. and Tang, Z.
 year={2013},
 month={Apr},
 pages={A36}
+}
+
+@article{Desmars2013a,
+title={Statistical and numerical study of asteroid orbital uncertainty},
+volume={554},
+url={http://dx.doi.org/10.1051/0004-6361/201321090},
+DOI={10.1051/0004-6361/201321090},
+journal={Astronomy \& Astrophysics},
+publisher={EDP Sciences},
+author={Desmars, J. and Bancelin, D. and Hestroffer, D. and Thuillot, W.},
+year={2013},
+month={May},
+pages={A32}
 }
 
 @article{Camargo2014,
